# jazz

./: .dockerignore  .gitattributes  .gitignore  .oxfmtignore  .oxlintignore  .pnpm-approved-builds.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GROOVE_REVIEW.md  JAZZ_CORE_SWAP.md  PERF_FINDINGS_DROPDOWN.md  RALPH_TASK.md  README.md  TODO.md  biome.json  flake.nix  from-legacy-to-new-jazz.md  lefthook.yml  legacy-jazz.md  libtest.rlib  main  new-jazz-no-context.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm.builds.json  setup.sh  subset-covalues(3).ndjson  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
crates/bf-tree-web/: Cargo.toml
crates/bf-tree-web/src/: lib.rs  storage.rs  sync.rs  tree.rs
crates/cojson-core-rn/: .gitignore  CHANGELOG.md  Cargo.toml  CojsonCoreRn.podspec  README.md  build.rs  craby.toml  package.json  react-native.config.js  tsconfig.json  ubrn.config.yaml
crates/cojson-core-rn/CojsonCoreRnFramework.xcframework/: Info.plist
crates/cojson-core-rn/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
crates/cojson-core-rn/cpp/: CrabyUtils.hpp  CxxCojsonCoreRnModule.cpp  CxxCojsonCoreRnModule.hpp  cojson-core-rn.cpp  cojson-core-rn.h
crates/cojson-core-rn/example/: app.json  package.json
crates/cojson-core-rn/ios/: CojsonCoreRn.h  CojsonCoreRn.mm  CojsonCoreRnModuleProvider.mm
crates/cojson-core-rn/pkg/: CoJSONCoreRN.podspec  nitro.json  package.json
crates/cojson-core-rn/rust/: Cargo.toml
crates/cojson-core-rn/src/: NativeCojsonCoreRn.ts  index.ts  index.tsx  lib.rs
crates/cojson-core-uniffi/: Cargo.toml
crates/cojson-core-uniffi/src/: lib.rs
crates/cojson-core-wasm/: CHANGELOG.md  Cargo.toml  build.js  edge-lite.js  index.d.ts  index.js  package.json
crates/cojson-core-wasm/__test__/: index.test.ts
crates/cojson-core-wasm/public/: cojson_core_wasm.d.ts  cojson_core_wasm.js  cojson_core_wasm.wasm  cojson_core_wasm.wasm.js
crates/cojson-core-wasm/src/: lib.rs
crates/cojson-storage/: Cargo.toml
crates/cojson-storage/benches/: storage_benchmark.rs
crates/cojson-storage/src/: error.rs  lib.rs  traits.rs  traits_async.rs  types.rs
crates/groove/: Cargo.toml  README.md
crates/groove-cli/: Cargo.toml
crates/groove-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/groove-napi/scripts/: build.js
crates/groove-napi/src/: lib.rs
crates/groove-server/: Cargo.toml
crates/groove-server/src/: axum_env.rs  config.rs  handlers.rs  hyper_env.rs  lib.rs  main.rs  native_driver.rs  user_provisioning.rs
crates/groove-tokio/: Cargo.toml
crates/groove-tokio/src/: lib.rs
crates/groove-wasm/: Cargo.toml  package.json
crates/groove-wasm/pkg/: groove_wasm.d.ts  groove_wasm.js  groove_wasm_bg.wasm  groove_wasm_bg.wasm.d.ts
crates/groove-wasm/src/: driver.rs  driver_bridge.rs  indexeddb.rs  lib.rs  runtime.rs  sync.rs  synced_local_node.rs  types.rs
crates/groove-wasm/tests/: indexeddb_tests.rs  opfs.rs  wasm.rs
crates/groove/SPEC/: 1_intro.md  2_storage_model.md  3_queries_operators.md  4_incremental_maintenance.md  5_prepared_shapes.md  6_recursion.md  7_correctness_scope.md  A_impl_map.md  B_benchmarks.md  INVARIANTS.md
crates/groove/benches/: insert_benchmark.rs  memory_benchmark.rs  micro.rs  projection_benchmark.rs  scenario.rs  subscription_benchmark.rs  update_benchmark.rs
crates/groove/examples/: quickstart.rs
crates/groove/src/: commit.rs  driver.rs  io_handler.rs  lib.rs  listener.rs  metadata.rs  node.rs  object.rs  object_manager.rs  queries.rs  runtime_core.rs  schema.rs  storage.rs  sync_manager.rs  window_codec.rs
crates/groove/tests/: aggregate_sql_semantics.rs  anti_join_regressions.rs  arrangement_regressions.rs  branch.rs  inline_records_snapshot.rs  listener.rs  migration_e2e.rs  multisink_subscription.rs  node.rs  object.rs  persistence.rs  prepared_binding_regressions.rs  recursive_cycle_regressions.rs  snapshot_subscription_regressions.rs  sql_database.rs  sql_parser.rs  sql_schema.rs  storage.rs  sync.rs  sync_policy.rs  upstream_sync.rs
crates/jazz/: Cargo.toml  README.md
crates/jazz-broker-wasm/: Cargo.toml  package.json
crates/jazz-broker-wasm/src/: lib.rs
crates/jazz-browser-broker/: Cargo.toml
crates/jazz-browser-broker/src/: broker.rs  lib.rs  protocol.rs  tab_client.rs
crates/jazz-browser-broker/tests/: broker_core.rs  protocol.rs  tab_client.rs
crates/jazz-cli/: Cargo.toml
crates/jazz-cli/src/: client.rs  lib.rs  main.rs  routes.rs  transport.rs
crates/jazz-cli/tests/: auth_test.rs  integration.rs  test_server.rs
crates/jazz-cloud-server/: Cargo.toml  ENV.md
crates/jazz-cloud-server/src/: main.rs  metrics.rs  server.rs
crates/jazz-lsm/: BENCHMARK_OVERVIEW.md  Cargo.toml  README.md  package.json
crates/jazz-lsm/src/: db.rs  error.rs  (+5 more)
crates/jazz-multi-server/: Cargo.toml
crates/jazz-napi/: .gitignore  CHANGELOG.md  Cargo.toml  FAST_LOCAL_LOOP.md  index.cjs  index.d.ts  index.js  package.json
crates/jazz-nitro/: Cargo.toml  JazzNitro.podspec  jazz-nitro.nitro.ts  nitro.json  package.json  tsconfig.json
crates/jazz-rs/: Cargo.toml
crates/jazz-sim/: Cargo.toml
crates/jazz-tools/: Cargo.toml  ENV.md  TESTING_GUIDELINES.md  TEST_MIGRATION  build.rs
crates/jazz-transport/: Cargo.toml
crates/jazz-wasm/: CHANGELOG.md  Cargo.toml  package.json
crates/mini-jazz-sqlite-wasm/: Cargo.toml
groove/: Cargo.toml
groove-server/: Cargo.toml
groove-server/src/: axum_env.rs  handlers.rs  lib.rs  main.rs
groove-wasm/: Cargo.toml  blob-helpers.ts
groove-wasm/pkg/: groove_wasm.d.ts  groove_wasm.js  groove_wasm_bg.wasm  groove_wasm_bg.wasm.d.ts  package.json
groove-wasm/src/: indexeddb.rs  lib.rs  sync.rs  synced_local_node.rs
groove-wasm/tests/: indexeddb_tests.rs
groove/src/: branch.rs  commit.rs  lib.rs  listener.rs  merge.rs  node.rs  object.rs  signal.rs  storage.rs
groove/tests/: branch.rs  commit.rs  listener.rs  migration_e2e.rs  node.rs  object.rs  persistence.rs  sql_blob.rs  sql_database.rs  sql_parser.rs  sql_row.rs  sql_schema.rs  storage.rs  sync.rs
(+6200 files in other folders)
