[workspace]
resolver = "2"
members = [
  "crates/jazz-tools",
  "crates/jazz-browser-broker",
  "crates/jazz-broker-wasm",
  "crates/jazz-wasm",
  "crates/jazz-napi",
  "crates/jazz-rn/rust",
  "crates/wasm-tracing",
  "examples/todo-server-rs",
  "examples/docs/todo-server-rs",
  "crates/opfs-btree",
  "dev/benchmarks/storage/bench-core",
  "dev/benchmarks/storage/native",
]
[patch.crates-io]
rust-rocksdb = { git = "https://github.com/zaidoon1/rust-rocksdb.git", tag = "v0.48.0" }
