[package]
name = "groove-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "groove-server"
path = "src/main.rs"

[dependencies]
groove = { path = "../groove", features = ["sync-server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
