[package]
name = "groove"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["uuid/js", "getrandom/js", "dep:web-time"]

[dependencies]
blake3 = "1"
uuid = { version = "1", features = ["v7"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"
getrandom = "0.2"
web-time = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bytes = "1"
futures = "0.3"
