[package]
name = "cojson-core-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cojson-core = { path = "../cojson-core" }
bf-tree = { path = "../bf-tree-web" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 with wasm_js feature (needed by rand 0.9 via bf-tree)
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
thiserror = "1.0"
blake3 = "1.5"

[features]
default = ["console_error_panic_hook"]
