[package]
name = "cojson-storage"
version = "0.1.0"
edition = "2021"
description = "Core storage abstractions for Jazz/CoJSON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz"

[features]
default = []
# Enable async storage backend support
async = ["tokio"]
# Enable serde serialization
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "1.0"

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
serde_json = "1.0"
