[package]
name = "groove-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Jazz/Groove database operations"

[[bin]]
name = "jazz"
path = "src/main.rs"

[dependencies]
groove = { path = "../groove" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
