[package]
name = "groove-napi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
groove = { package = "jazz-core", path = "../groove", version = "2.0.0-alpha.0", features = ["surrealkv"] }
futures = "0.3"
napi = { version = "2", features = ["napi5", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[build-dependencies]
napi-build = "2"
