[package]
name = "groove-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "groove-server"
path = "src/main.rs"

[dependencies]
groove = { path = "../groove", features = ["sync-server", "jwt-auth"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
