[package]
name = "groove-tokio"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
groove = { path = "../groove" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
