[package]
name = "jazz-runtime-tokio"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Tokio runtime integration for Jazz core."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[lib]
name = "groove_tokio"
doctest = false

[dependencies]
groove = { package = "jazz-core", path = "../groove", version = "2.0.0-alpha.0" }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
