[package]
name = "groove-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Groove database engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
groove = { path = "../groove" }
groove-runtime = { path = "../groove-runtime" }
jazz-transport = { path = "../jazz-transport" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
uuid = { version = "1.0", features = ["v7", "serde", "js"] }
smallvec = { version = "1.13", features = ["serde"] }
web-time = "1.1"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
