[package]
name = "jazz-core"
version = "2.0.0-alpha.0"
edition = "2024"
description = "Core local-first relational engine for Jazz."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[lib]
name = "groove"

[features]
default = []
surrealkv = ["dep:surrealkv", "dep:tokio"]

[dependencies]
opfs-btree = { path = "../opfs-btree", version = "0.1.0" }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
blake3 = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
internment = "0.8"
smallvec = { version = "1.11", features = ["serde"] }
smolset = "1.3"
web-time = "1.1"
small-map = "0.1"
bitvec = "1.0"
ahash = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surrealkv = { version = "0.19", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "insert_benchmark"
harness = false

[[bench]]
name = "update_benchmark"
harness = false

[[bench]]
name = "subscription_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[[bench]]
name = "projection_benchmark"
harness = false
