[package]
name = "groove"
version = "0.1.0"
edition = "2024"

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]

[dependencies]
internment = { version = "0.8.6", features = ["serde"] }
rocksdb = { package = "rust-rocksdb", version = "0.48.0", default-features = false, features = [
  "lz4",
  "zstd",
], optional = true }
paste = "1.0.15"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["serde", "v5"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
opfs-btree = { path = "../opfs-btree" }

[dev-dependencies]
hdrhistogram = "7.5.4"
rusqlite = { version = "0.34", features = ["bundled"] }
tempfile = "3.27.0"

[[bench]]
name = "scenario"
harness = false

[[bench]]
name = "micro"
harness = false
