[package]
name = "groove"
version = "0.1.0"
edition = "2024"

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]
slatedb = ["dep:slatedb", "dep:tokio"]

[dependencies]
internment = { version = "0.8.6", features = ["serde"] }
bytes = "1"
smallvec = "1.15"
rocksdb = { package = "rust-rocksdb", version = "0.48.0", default-features = false, features = [
  "lz4",
  "zstd",
], optional = true }
paste = "1.0.15"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["serde", "v5"] }
web-time = "1.1.0"
rustc-hash.workspace = true
opfs-btree = { path = "../opfs-btree" }
slatedb = { version = "0.14.1", default-features = false, features = [
  "moka",
  "zstd",
], optional = true }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
], optional = true }

[dev-dependencies]
hdrhistogram = "7.5.4"
rusqlite = { version = "0.34", features = ["bundled"] }
tempfile = "3.27.0"

[[bench]]
name = "scenario"
harness = false

[[bench]]
name = "micro"
harness = false
