[package]
name = "jazz-broker-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Jazz browser broker state machine"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jazz-browser-broker = { path = "../jazz-browser-broker", version = "0.1.0" }
serde = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "-g"]
