[package]
name = "jazz-browser-broker"
version = "0.1.0"
edition = "2024"
description = "Sans-IO browser broker leader election state machine"
license = "MIT OR Apache-2.0"

[lib]
name = "jazz_browser_broker"
path = "src/lib.rs"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
