[package]
name = "jazz-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jazz"
path = "src/main.rs"

[dependencies]
groove = { path = "../groove" }
groove-rocksdb = { path = "../groove-rocksdb" }
groove-runtime = { path = "../groove-runtime" }
jazz-transport = { path = "../jazz-transport" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
tempfile = "3"
