[package]
name = "jazz-tools"
version = "2.0.0-alpha.0"
edition = "2024"
description = "CLI tools for Jazz local-first relational databases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[[bin]]
name = "jazz-tools"
path = "src/main.rs"

[dependencies]
groove = { package = "jazz-core", path = "../groove", version = "2.0.0-alpha.0", features = [
  "surrealkv",
] }
groove-tokio = { package = "jazz-runtime-tokio", path = "../groove-tokio", version = "2.0.0-alpha.0" }
jazz-transport = { path = "../jazz-transport", version = "2.0.0-alpha.0" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
bytes = "1"
axum-extra = { version = "0.9", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
jsonwebtoken = "9"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tempfile = "3"
jsonwebtoken = "9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
jazz-transport = { path = "../jazz-transport", version = "2.0.0-alpha.0" }
