[package]
name = "jazz-lsm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
compare-native = ["dep:bf-tree", "dep:rocksdb", "dep:fjall", "dep:surrealkv", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bf-tree = { version = "0.4.7", optional = true }
rocksdb = { version = "0.24", default-features = false, features = ["lz4"], optional = true }
fjall = { version = "2", optional = true }
surrealkv = { version = "0.19", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
opfs-btree = { path = "../opfs-btree" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
  "WorkerGlobalScope",
  "WorkerNavigator",
  "Navigator",
  "StorageManager",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemGetFileOptions",
  "FileSystemSyncAccessHandle",
  "FileSystemReadWriteOptions",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "lsm_native"
harness = false

[[bench]]
name = "compare_native"
harness = false
required-features = ["compare-native"]
