[package]
name = "jazz-multi-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jazz-multi-server"
path = "src/main.rs"

[dependencies]
groove = { path = "../groove", features = ["surrealkv"] }
groove-tokio = { path = "../groove-tokio" }
jazz-transport = { path = "../jazz-transport" }

axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-stream = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
