[package]
name = "jazz-nitro"
version = "0.1.0"
edition = "2024"
description = "React Native (Nitro Modules) binding for Jazz runtime."

[lib]
# Compiled as a rlib; the generated jazz_nitro_rust staticlib includes us.
crate-type = ["rlib"]

[dependencies]
groove = { package = "jazz-tools", path = "../jazz-tools", version = "2.0.0-alpha.0", default-features = false, features = [
  "fjall",
] }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3.25.0"
