[package]
name = "jazz-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
groove = { path = "../groove" }
groove-rocksdb = { path = "../groove-rocksdb" }
groove-tokio = { path = "../groove-tokio" }
jazz-transport = { path = "../jazz-transport" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
