[package]
name = "jazz-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
groove = { path = "../groove", features = ["bftree"] }
groove-tokio = { path = "../groove-tokio" }
jazz-transport = { path = "../jazz-transport" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
