[package]
name = "jazz-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
groove = { package = "jazz-core", path = "../groove", version = "2.0.0-alpha.0", features = [
  "surrealkv",
] }
groove-tokio = { package = "jazz-runtime-tokio", path = "../groove-tokio", version = "2.0.0-alpha.0" }
jazz-transport = { path = "../jazz-transport", version = "2.0.0-alpha.0" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
