[package]
name = "jazz-sim"
version = "0.1.0"
edition = "2024"

[features]
default = []
bench-alloc-metrics = []
bench-alloc-sites = ["dep:backtrace"]
profiling = ["dep:pprof"]
transport-compression-lz4 = ["jazz/transport-compression-lz4"]
transport-compression-zstd = ["jazz/transport-compression-zstd"]

[dependencies]
automerge = "0.10.0"
backtrace = { version = "0.3", optional = true }
diamond-types = "1.0.0"
hdrhistogram = "7.5.4"
jazz = { path = "../jazz", features = ["testing"] }
libc = "0.2"
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
postcard = { version = "1.1.3", features = ["alloc"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
uuid = "1.18.1"
zstd = "0.13.3"

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "fixture_smoke"
harness = false

[[bench]]
name = "s1_saas"
harness = false

[[bench]]
name = "s2_canvas"
harness = false

[[bench]]
name = "s3_permissions"
harness = false

[[bench]]
name = "s4_order_processing"
harness = false

[[bench]]
name = "s5_durable_stream"
harness = false

[[bench]]
name = "s6_text_traces"
harness = false

[[bench]]
name = "s7_migrations"
harness = false

[[bench]]
name = "s9_durable_execution"
harness = false

[[bench]]
name = "customer_cold_start"
harness = false

[[bench]]
name = "policy_graph_concurrent"
harness = false
